[package]
name = "egui-sdl3"
version = "0.4.0"
edition = "2021"
authors = [
    "troidem <mxmgorin@gmail.com>",
    "Abus <git@abus.sh>",
]
description = "egui + SDL3: event handling and rendering via OpenGL, Canvas, WebGPU"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abus-sh/egui-sdl3"
homepage = "https://github.com/abus-sh/egui-sdl3"
keywords = ["sdl3", "egui", "gui", "gamedev"]
categories = ["gui"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[features]
# `wgpu-backend` is opt-in: it pulls in wgpu + naga (~90 extra crates). The
# default keeps the two lightweight backends the docs/examples exercise; enable
# `wgpu-backend` explicitly if you need the WebGPU renderer.
default = ["links", "glow-backend", "canvas-backend"]
# Enable rendering via glow
glow-backend = ["glow", "egui_glow"]
# Enable rendering via canvas
canvas-backend = ["sdl3-sys", "bytemuck", "egui/bytemuck", "sdl3/unsafe_textures"]
# Enable rendering via canvas
wgpu-backend = ["egui-wgpu", "egui-wgpu/capture", "web-time", "sdl3/raw-window-handle"]
# Enable opening links in a browser when an egui hyperlink is clicked.
links = ["webbrowser"]
# Forward sdl3 features
sdl3-gfx = ["sdl3/gfx"]
sdl3-image = ["sdl3/image"]
sdl3-mixer = ["sdl3/mixer"]
sdl3-ttf = ["sdl3/ttf"]
sdl3-raw-window-handle = ["sdl3/raw-window-handle"]
sdl3-unsafe_textures = ["sdl3/unsafe_textures"]
sdl3-use-vcpkg = ["sdl3/use-vcpkg"]
sdl3-use-pkgconfig = ["sdl3/use-pkg-config"]
sdl3-static-link = ["sdl3/static-link"]
sdl3-bundled = ["sdl3/build-from-source"]
webbrowser = ["dep:webbrowser"]

[dependencies]
log = "0.4.32"
sdl3 = { version = "0.18.4", default-features = false }
egui = "0.34.3"
webbrowser = { version = "1.2.1", optional = true }
# glow-backend:
glow = { version = "0.17.0", optional = true }
egui_glow = { version = "0.34.3", optional = true }
# canvas-backend:
sdl3-sys = { version = "0.6.6", optional = true }
bytemuck = { version = "1.23.2", optional = true }
# wgpu-backend:
egui-wgpu = { version = "0.34.3", optional = true }
web-time = { version = "1.1.0", optional = true }

[dev-dependencies]
pollster = { version = "0.4.0" }

# Each example needs its backend feature. Without these, `cargo build
# --examples` fails on the wgpu example now that it isn't in the default set;
# the guards let it be skipped (or built with `--features wgpu-backend`).
[[example]]
name = "canvas"
required-features = ["canvas-backend"]

[[example]]
name = "glow"
required-features = ["glow-backend"]

[[example]]
name = "wgpu"
required-features = ["wgpu-backend"]
